--- a/assetecBack/src/main/resources/application.properties
+++ b/assetecBack/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 #Si te da conflicto, cambiar el puerto a uno que no este siendo utilizado
 server.port=8090
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=all
+#Configurar tu nombre usuario y contrasenia del postgres
+spring.datasource.username=postgres
 spring.datasource.password=postgresql
-#AL final es el nombre de la base de datos que vas a ingresar (/assetec)
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/assetec
+#Verificar el puerto que usa el postgres, eso poner en luegar del XXXX (localhost:XXXX).
+#"/assetec" es la base de datos que se utiliza
+spring.datasource.url=jdbc:postgresql://localhost:5433/assetec
 spring.datasource.hikari.auto-commit=false
 spring.jackson.time-zone=America/Lima
