--- a/assetecFront/package.json
+++ b/assetecFront/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.1.1",
-    "@angular/cli": "~11.0.6",
+    "@angular/cli": "^13.1.1",
     "@angular/compiler-cli": "~11.0.6",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
