--- a/assetecBack/src/main/resources/application.properties
+++ b/assetecBack/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
 #Configurar tu nombre usuario y contrasenia del postgres
 spring.datasource.username=postgres
-spring.datasource.password=postgresql
+spring.datasource.password=3012040302
 #Verificar el puerto que usa el postgres, eso poner en luegar del XXXX (localhost:XXXX).
 #"/assetec" es la base de datos que se utiliza
 spring.datasource.url=jdbc:postgresql://localhost:5432/assetec
