--- a/assetecBack/src/main/resources/application.properties
+++ b/assetecBack/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #Si te da conflicto, cambiar el puerto a uno que no este siendo utilizado
-server.port=8090
+server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
 #Configurar tu nombre usuario y contrasenia del postgres
 spring.datasource.username=postgres
-spring.datasource.password=3012040302
+spring.datasource.password=postgresql
 #Verificar el puerto que usa el postgres, eso poner en luegar del XXXX (localhost:XXXX).
 #"/assetec" es la base de datos que se utiliza
-spring.datasource.url=jdbc:postgresql://localhost:5433/assetec
+spring.datasource.url=jdbc:postgresql://localhost:5432/assetec
 spring.datasource.hikari.auto-commit=false
 spring.jackson.time-zone=America/Lima
