--- a/assetecFront/package.json
+++ b/assetecFront/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "bootstrap": "^5.1.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
